# hit-product-group-2

./: .env.template  .gitignore  README.md  backend.py  chat_interface.py  main.py  pyproject.toml
notebooks/: fine-tuning (3).ipynb  fine_tuning.ipynb
scripts/: setupgit.sh
src/config/: settings.py
src/data/: dataset.py
src/inference/: inference.py
src/model/: model_loader.py
src/training/: trainer.py
src/utils/: gpu_utils.py  postprocessing.py  streaming.py
